Owner on kpis are now optionnals
